# Diffusion_Competition

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  requirements.txt  todo.txt
data/files/: 0.txt  0.vtu  1.txt  1.vtu  2.txt  2.vtu  3.txt  3.vtu  analytic_mesh.txt  analytic_mesh.vtr  analytical_0.txt  analytical_0.vtu  analytical_1.txt  analytical_1.vtu  analytical_2.txt  analytical_2.vtu  analytical_3.txt  analytical_3.vtu  analytical_mesh.txt  analytical_mesh.vtu  our_0.txt  our_0.vtu  our_1.txt  our_1.vtu  our_2.txt  our_2.vtu  our_3.txt  our_3.vtu  our_mesh.txt  our_mesh.vtu  test_0.txt  test_1.txt  test_2.txt  test_3.txt
source/: a.out  main.cpp  params.h
source/mesh/: creating.h  drawing.py  loading.h  new_draw.py  test.py
source/sampling/: FDM.cpp  FDM.h
